Fix alignment of XY header for probe points in the settings view

--- a/src/octoprint_bed_leveling/static/less/main.less
+++ b/src/octoprint_bed_leveling/static/less/main.less
@@ -1,1 +1,7 @@
 @import '**/*.less';
+
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
