--- a/src/octoprint_bed_leveling/static/less/settings.less
+++ b/src/octoprint_bed_leveling/static/less/settings.less
@@ -2,4 +2,10 @@
   .input-append {
     margin-right: 8px;
   }
+
+  .controls .header-span {
+    float:left;
+    width:120px;
+    min-height: 30px;
+  }
 }
